--- a/app/src/main/res/layout/spiner_personalizado.xml
+++ b/app/src/main/res/layout/spiner_personalizado.xml
@@ -4,9 +4,10 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/edit_text_1"
+    android:layout_marginTop="2dp"
+    android:background="#FFFFFF"
     android:gravity="left"
-    android:padding="10sp"
 
+    android:padding="10sp"
     android:textColor="#4A4A4A"
     android:textSize="18sp" />
