--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4A4A4A"
-    tools:context=".MenuPrincipal">
+    tools:context=".MenuMapa">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/MAPA"
