--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4A4A4A"
-    tools:context=".persona">
+    tools:context=".Persona">
 
     <Button
         android:id="@+id/OBSERVACION2"
