--- a/app/src/main/res/layout/alert_ocupacion.xml
+++ b/app/src/main/res/layout/alert_ocupacion.xml
@@ -12,7 +12,7 @@
         android:layout_height="40dp"
         android:background="#0E5891"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/cargar_datos"
+        android:text="@string/ocupacion"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,13 +23,14 @@
         android:id="@+id/CANCELAR3"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
         android:text="@string/cancelar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/Ocupacion"
-        app:layout_constraintTop_toBottomOf="@+id/AutoTrabajos" />
+        app:layout_constraintStart_toStartOf="@+id/AutoTrabajos"
+        app:layout_constraintTop_toBottomOf="@+id/AGREGARMANUALMENTE" />
 
     <Button
         android:id="@+id/GUARDAR3"
@@ -39,36 +40,79 @@
         android:text="@string/guardar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="@+id/CANCELAR3"
-        app:layout_constraintEnd_toEndOf="@+id/Ocupacion"
+        app:layout_constraintEnd_toEndOf="@+id/AutoTrabajos"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/CANCELAR3"
         app:layout_constraintTop_toTopOf="@+id/CANCELAR3"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/Ocupacion"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/edit_text_1"
-        android:gravity="center_horizontal|center_vertical"
-        android:hint="@string/ocupacion"
-        android:textColor="#4A4A4A"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
     <AutoCompleteTextView
         android:id="@+id/AutoTrabajos"
         android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/edit_text_1"
         android:gravity="center_horizontal|center_vertical"
         android:hint="BUSCAR TRABAJO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Ocupacion" />
+        app:layout_constraintTop_toBottomOf="@+id/ocupado" />
+
+    <TextView
+        android:id="@+id/AGREGARMANUALMENTE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/agregar_trabajo_manualmente"
+        android:textColor="@color/ic_launcher_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AutoTrabajos" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ocupado"
+        android:layout_width="300dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/edit_text_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4">
+
+        <RadioGroup
+            android:id="@+id/TIENETRABAJO"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView15">
+
+            <RadioButton
+                android:id="@+id/SITRABAJO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/si" />
+
+            <RadioButton
+                android:id="@+id/NOTRABAJO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="@string/no" />
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/tiene_trabajo"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
