--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -7,6 +7,20 @@
     android:background="#4A4A4A"
     tools:context=".MenuMapa">
 
+    <Button
+        android:id="@+id/COMPARTIR"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="5dp"
+        android:background="@drawable/button1"
+        android:onClick="NuevaFamilia"
+        android:text="@string/compartit"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.gms.maps.MapView
         android:id="@+id/MAPA"
         android:layout_width="wrap_content"
@@ -17,6 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="130dp"
         android:layout_height="80dp"
         android:layout_marginBottom="10dp"
