--- a/app/src/main/res/layout/contact_search_layout.xml
+++ b/app/src/main/res/layout/contact_search_layout.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
         android:text="TextView"
+        android:textColor="#E1000000"
         android:textSize="18sp" />
 
 </LinearLayout>
