--- a/app/src/main/res/layout/alert_inspeccion_exterior.xml
+++ b/app/src/main/res/layout/alert_inspeccion_exterior.xml
@@ -64,6 +64,16 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/edit_text_1">
 
+                <ImageView
+                    android:id="@+id/INFOBOTONCASA"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/button1"
+                    android:onClick="TipodeCasa"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/informacion" />
+
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
@@ -118,6 +128,16 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/edit_text_1">
+
+                <ImageView
+                    android:id="@+id/INFOBOTONREVOQUE"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/button1"
+                    android:onClick="TipodeCasa"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/informacion" />
 
                 <TextView
                     android:id="@+id/textView7"
