--- a/app/src/main/res/layout/alert_vivienda.xml
+++ b/app/src/main/res/layout/alert_vivienda.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4A4A4A">
+    android:background="@drawable/button1">
 
     <Button
         android:id="@+id/CANCELARVIVIENDA"
@@ -163,6 +163,16 @@
                 android:layout_height="100dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/edit_text_1">
+
+                <ImageView
+                    android:id="@+id/INFOBOTON"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/button1"
+                    android:onClick="TipodeCasa"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/informacion" />
 
                 <TextView
                     android:id="@+id/TXTBAÑOTIENE"
