--- a/app/src/main/res/layout/alert_listado_botones.xml
+++ b/app/src/main/res/layout/alert_listado_botones.xml
@@ -12,7 +12,7 @@
         android:layout_height="40dp"
         android:background="#0E5891"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/educacion"
+        android:text="@string/modulos"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,55 +20,104 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/CANCELAREDUCACION"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/button1"
-        android:text="@string/cancelar"
-        android:textColor="#4A4A4A"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/GUARDAREDUCACION"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button1"
-        android:text="@string/guardar"
-        android:textColor="#4A4A4A"
-        app:layout_constraintBottom_toBottomOf="@+id/CANCELAREDUCACION"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.801"
-        app:layout_constraintStart_toEndOf="@+id/CANCELAREDUCACION"
-        app:layout_constraintTop_toTopOf="@+id/CANCELAREDUCACION"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout4"
-        android:layout_width="0dp"
+        android:id="@+id/LISTOBOTON"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:background="@drawable/button1"
+        android:text="@string/listo"
+        android:textColor="#4A4A4A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:background="@drawable/edit_text_1"
-        app:layout_constraintBottom_toTopOf="@+id/CANCELAREDUCACION"
+        app:layout_constraintBottom_toTopOf="@+id/LISTOBOTON"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textefector">
 
-        <com.google.android.material.chip.ChipGroup
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="vertical">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip"
-                android:layout_width="wrap_content"
+            <Switch
+                android:id="@+id/SWITCHINSPECCIONEXTERIOR"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/baño_tiene" />
-        </com.google.android.material.chip.ChipGroup>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_margin="10dp"
+                android:text="@string/externo_vivienda"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHSERVICIOSBASICOS"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/servicios_basicos"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHVIVIENDA"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/vivienda"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHEDUCACION"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/educacion"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHCONTACTO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/contacto"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHOCUPACION"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/ocupacion"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHEFECTOR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/efector"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHOBSERVACIONES"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/observaciones"
+                android:textSize="22sp" />
+
+            <Switch
+                android:id="@+id/SWITCHFACTORESRIESGO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/factores_riesgo"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
